--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="tal-hybrid-styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="tal-hybrid-styles.css">
     <title>Award-winning life insurance by TAL</title>
-    
 </head>
 <body>
     <header id="header" class="header">
@@ -41,7 +42,7 @@
             <ul>
                 <li><span>Apply online if you're between 19-74 (age next birthday)</span></li>
                 <li><span>Get an online quote for cover from $100,000 &ndash; $5 million</span></li>
-                <li><span>Optional add-on insurance for more comprehensive cover</span></li>
+                <li><span>Add optional benefits for more comprehensive cover</span></li>
             </ul>
             <p><a href="#rewards" class="banner-intro-cta">Build your cover</a></p>
         </section>
@@ -50,7 +51,7 @@
                 <img src="https://www.tal.com.au/-/media/tal/images/icons/green/tal0046-iconography_green_livingbenefits.png?h=50&w=47&hash=D75C6A6C4878141E1A91BD88FDAF0262" alt="Offer icon">
             </article>
             <article class="rewards-copy">
-                <h2>Get rewarded with up to 15% off</h2>
+                <h2>You could get rewarded with up to 15% off</h2>
                 <p>With TAL Health Sense you could get an upfront lifetime discount of up to 15% off your premiums on Life, Critical Illness and/or Total & Permanent Disability (TPD) insurance.<sup><a href="#health-sense">1</a></sup><br> <a href="https://www.tal.com.au/health-sense" alt="TAL Health Sense terms">Read eligibility criteria and conditions</a></p>
             </article>
         </section>
@@ -85,41 +86,146 @@
         <section class="about-tal">
             <section class="about-tal-faqs">
                 <h2>Life Insurance FAQs</h2>
-                <article class="accordion">
+                <div class="accordion accordion-flush" id="accordionFlushExample">
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="true" aria-controls="flush-collapseOne">
+                            What benefits does Life Insurance include?
+                        </button>
+                      </h2>
+                      <div id="flush-collapseOne" class="accordion-collapse collapse">
+                        <div class="accordion-body"><p>Here are some of the key benefits of TAL Accelerated Protection Life Insurance: </p>
+                            <p><strong>Death benefit </strong></p>
+                            <p>Your Nominated Beneficiary or the Policy Owner will receive a lump sum payment if you pass away while you have a current Life Insurance policy. </p>
+                            <p> <strong>Terminal Illness Benefit </strong></p>
+                            <p>The Life Insured will receive the lump sum Benefit Amount if they’re diagnosed with a Terminal Illness and have less than 12 months to live. </p>
+                            <p><strong>Advanced Payment Benefit</strong></p>
+                            <p>To support your loved ones when they need it most, your beneficiary can get an advance payment of 10% of the Benefit Amount, up to a maximum of $25,000, as soon as we receive the death certificate or medical certificate confirming death. </p>
+                            <p><strong>Repatriation Benefit </strong></p>
+                            <p>In the event you die outside Australia, we’ll increase the maximum amount payable under the Advanced Payment Benefit to 10% of the benefit amount, up to a maximum of $35,000. </p>
+                            <p> For a complete list of benefits and details, please refer to the Product Disclosure Statement. </p></div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="true" aria-controls="flush-collapseTwo">
+                            What other insurance can I include in my TAL life insurance plan?
+                        </button>
+                      </h2>
+                      <div id="flush-collapseTwo" class="accordion-collapse collapse">
+                        <div class="accordion-body"><p>You have the flexibility to customise your cover to meet the needs of your family with the following insurance options:</p>  
+                            <p><strong>Total and Permanent Disability (TPD) Insurance</strong></p>
+                            <p> Provides you with a lump sum payment of up to $3 million if you have a serious accident or illness that leaves you permanently disabled and unable to work again. This benefit can help with medical, rehab, or living expenses so you can go on making the most of your life. Waiting Periods apply.</p>  
+                            <p><strong>Critical Illness insurance</strong></p>
+                            <p>Also known as trauma or recovery insurance, this benefit offers a lump sum payment of up to $2 million if you’re diagnosed and meet the required severity criteria for a critical illness such as cancer, heart attack, or stroke. This benefit can help cover medical expenses, loss of income, and household expenses while you’re undergoing extensive medical treatment. Qualifying  Periods apply for some conditions.</p>  
+                            <p><strong>Income Protection Insurance</strong></p>
+                            <p>Provides you with a monthly benefit payment of up to 70% of your income, to a maximum of $30,000 per month, if you’re unable to work for a period of time because of illness or injury. It can help replace lost income while you focus on getting back on your feet and returning to work. Waiting Periods apply.</p>  
+                            <p>You can also tailor your waiting period (how long before payments begin) and benefit period (how long you can receive the monthly benefit for) to suit your needs and budget.
+                            </p>    </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="true" aria-controls="flush-collapseThree">
+                            Am I eligible to apply for Life Insurance?
+                        </button>
+                      </h2>
+                      <div id="flush-collapseThree" class="accordion-collapse collapse">
+                        <div class="accordion-body"><p>You’re eligible to apply to get TAL life insurance if you’re:
+                        </p>
+                        <ul>
+                            <li><p>aged between 19 and 74 (age next birthday), and</p></li>
+                            <li><p>an Australian citizen or permanent resident, or New Zealand resident living permanently in Australia.</p></li>
+                        </ul>
+                        <p>There are usually no medical tests required and you can get a non-obligatory quote online within minutes.</p>   </div>
+                      </div></div>
+
+                      <div class="accordion-item">
+                        <h2 class="accordion-header">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="true" aria-controls="flush-collapseThree">
+                            How much life insurance do I need?
+                          </button>
+                        </h2>
+                        <div id="flush-collapseThree" class="accordion-collapse collapse">
+                          <div class="accordion-body">
+                            <p>Before you take out a life insurance policy, it’s a good idea to look at your current financial situation and think about what your expenses are now, and what they might be in the future.  </p>
+                            <p> To work out how much cover you need, you may want to consider the size of your mortgage, plus other debts. Then factor in all the other expenses your loved ones would face if you were no longer around, including everyday household expenses, childcare and education, and funeral costs. 
+                                </p>    </div>
+                        </div>
+                    </div>
+
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="true" aria-controls="flush-collapseThree">
+                            What is the difference between Life Insurance and Income Protection Insurance?
+                          </button>
+                        </h2>
+                        <div id="flush-collapseThree" class="accordion-collapse collapse">
+                          <div class="accordion-body">
+                            <p>Income protection insurance is one type of life insurance. They’re both designed to financially protect you and your family under different circumstances. Here are the key differences: 
+                                <p><strong>Income Protection</strong></p>
+                                <ul>
+                                <li><p>Helps you and your family with expenses if you become sick or injured and are unable to work beyond your Waiting Period.</p></li>
+                                    <li><p>Pays you a monthly benefit to replace part of your income.</p></li>
+                                        <li><p>Replaces lost income for a set period while you focus on getting better so you can return to work.</p></li>
+                                </ul>
+                                <p><strong>Life insurance </strong></p>
+                                <ul>
+                                    <li><p>Protects your loved ones financially if you were to pass away or are diagnosed with a terminal illness.</p></li>
+                                        <li><p>Pays your nominated beneficiary or estate a lump sum. </p></li>
+                                </ul></div>
+                        </div>
+                    </div>
+
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="true" aria-controls="flush-collapseThree">
+                            Where can I get more information on Life Insurance and premiums?
+                          </button>
+                        </h2>
+                        <div id="flush-collapseThree" class="accordion-collapse collapse">
+                          <div class="accordion-body">
+                            <p>You can refer to our key fact sheets and Product Disclosure Statement for further information:</p>
+<ul>
+    <li><a href="https://www.tal.com.au/-/media/tal/files/pds/key-facts/talr8089-tal-ap-life-insurance-key-facts.pdf">Life Insurance key facts</a></li>
+        <li><a href="https://www.tal.com.au/-/media/tal/files/pds/key-facts/talr8090-tal-ap-premiums-key-facts.pdf">Life insurance premiums key facts</a></li>
+            <li><a href="https://www.tal.com.au/-/media/tal/files/pds/accelerated-protection-combined-pds.pdf">Product Disclosure Statement</a></li>
+</ul>
+    </p>    </div>
+                        </div>
+                    </div>
+                  </div>
+                <!--article class="static-accordion">
                     <p>What benefits does Life Insurance include?</p>
                     <img src="https://i.imgur.com/XZW3HYG.png" alt="plus icon">
                 </article>
-                <article class="accordion">
+                <article class="static-accordion">
                     <p>What other insurance can I include in my TAL life insurance plan?</p>
                     <img src="https://i.imgur.com/XZW3HYG.png" alt="plus icon">
                 </article>
-                <article class="accordion">
-                    <p>Am I eligible for Life Insurance?</p>
+                <article class="static-accordion">
+                    <p>Am I eligible to apply for Life Insurance?</p>
                     <img src="https://i.imgur.com/XZW3HYG.png" alt="plus icon">
                 </article>
-                <article class="accordion">
-                    <p>How much life insurance do I need?</p>
-                    <img src="https://i.imgur.com/XZW3HYG.png" alt="plus icon">
-                </article>
-                <article class="accordion">
+                <article class="static-accordion">
                     <p>What is the difference between Life insurance and Income Protection insurance?</p>
                     <img src="https://i.imgur.com/XZW3HYG.png" alt="plus icon">
                 </article>
-                <article class="accordion">
+                <article class="static-accordion">
                     <p>Where can I get more information on Life Insurance and premiums?</p>
                     <img src="https://i.imgur.com/XZW3HYG.png" alt="plus icon">
-                </article>
+                </article-->
             </section>
             <section class="about-tal-why">
             <h2>4 reasons to choose TAL</h2>
             <section class="about-tal-why-info">
-                <section class="about-tal-why-info-copy">
+                <section class="about-tal-why-info-copy" id="award">
                     <img src="https://www.tal.com.au/-/media/tal/images/icons/product/why-choose-tal/tpd-why-tal-life-insurer.png" alt="award icon">
                     <p>TAL is a leading and award-winning Life Insurance specialist</p>
                 </section>
                 <section class="about-tal-why-info-copy">
-                    <img src="https://www.tal.com.au/-/media/tal/images/icons/product/why-choose-tal/tpd-why-tal-customers.png" alt="trust icon">
-                    <p>Trusted by over 5 million customers<sup><a href="#customers">2</a></sup></p>
+                    <img src="https://www.tal.com.au/-/media/tal/images/icons/product/why-choose-tal/tpd-why-tal-customers.png" alt="trust icon" >
+                    <p id="trust">Trusted by over 5 million customers<sup><a href="#customers">2</a></sup></p>
                 </section>
                 <section class="about-tal-why-info-copy">
                     <img src="https://www.tal.com.au/-/media/tal/images/icons/product/why-choose-tal/tpd-why-tal-claims.png" alt="claims icon">
@@ -176,12 +282,11 @@
                 <p id="customers"><strong>2</strong> Based on customer covers in force across Group, Retail and Direct and there may be duplicate lives insured.</p>
                 <p id="claims"><strong>3</strong> Claims statistics based on total claims paid under TAL Life Limited and TAL Life Insurance Services Limited insurance products (including funeral insurance) between 1 April 2023 and 31 March 2024.</p>
                 <br>
-                <p>The information provided on this website is general advice only and does not take into account your individual needs, objectives or financial situation. Before you decide to buy or to continue to hold an insurance product, you must read the relevant Product Disclosure Statement (PDS) and Financial Services Guide (FSG). The PDS and FSG contains important information which will help you understand the product including what's covered and what's not covered and to decide whether it is appropriate for you. The Target Market Determination (TMD) for the product is also available. Life insurance issued by TAL Life Limited ABN 70 050 109 450 AFSL 237848. Promoted and distributed by TAL Direct Pty Limited (of Level 16, 363 George Street, Sydney NSW 2000) ABN 39 084 666 017 AFSL 243260.</p>
+                <p>The information provided on this website is general advice only and does not take into account your individual needs, objectives or financial situation. Before you decide to buy or to continue to hold an insurance product, you must read the relevant Product Disclosure Statement (PDS). The PDS contains important information which will help you understand the product including what's covered and what's not covered and to decide whether it is appropriate for you. The Target Market Determination (TMD) for the product is also available. Life insurance issued by TAL Life Limited ABN 70 050 109 450 AFSL 237848. Promoted and distributed by TAL Direct Pty Limited (of Level 16, 363 George Street, Sydney NSW 2000) ABN 39 084 666 017 AFSL 243260.</p>
                 <p>TAL Direct and TAL Life are part of the TAL Dai-ichi Life Australia Pty Limited ABN 97 150 070 483 group of companies.</p>
             </section>
         </footer>
     
 </main>
-
 </body>
 </html>
