--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
                 <div class="accordion accordion-flush" id="accordionFlushExample">
                     <div class="accordion-item">
                       <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="true" aria-controls="flush-collapseOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="true" aria-controls="flush-collapseOne">
                             What benefits does Life Insurance include?
                         </button>
                       </h2>
-                      <div id="flush-collapseOne" class="accordion-collapse collapse">
+                      <div id="flush-collapseOne" class="accordion-collapse collapse show">
                         <div class="accordion-body"><p>Here are some of the key benefits of TAL Accelerated Protection Life Insurance: </p>
                             <p><strong>Death benefit </strong></p>
                             <p>Your Nominated Beneficiary or the Policy Owner will receive a lump sum payment if you pass away while you have a current Life Insurance policy. </p>
@@ -140,27 +140,13 @@
                         <p>There are usually no medical tests required and you can get a non-obligatory quote online within minutes.</p>   </div>
                       </div></div>
 
-                      <div class="accordion-item">
+                                          <div class="accordion-item">
                         <h2 class="accordion-header">
-                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="true" aria-controls="flush-collapseThree">
-                            How much life insurance do I need?
-                          </button>
-                        </h2>
-                        <div id="flush-collapseThree" class="accordion-collapse collapse">
-                          <div class="accordion-body">
-                            <p>Before you take out a life insurance policy, it’s a good idea to look at your current financial situation and think about what your expenses are now, and what they might be in the future.  </p>
-                            <p> To work out how much cover you need, you may want to consider the size of your mortgage, plus other debts. Then factor in all the other expenses your loved ones would face if you were no longer around, including everyday household expenses, childcare and education, and funeral costs. 
-                                </p>    </div>
-                        </div>
-                    </div>
-
-                    <div class="accordion-item">
-                        <h2 class="accordion-header">
-                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="true" aria-controls="flush-collapseThree">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="true" aria-controls="flush-collapseFour">
                             What is the difference between Life Insurance and Income Protection Insurance?
                           </button>
                         </h2>
-                        <div id="flush-collapseThree" class="accordion-collapse collapse">
+                        <div id="flush-collapseFour" class="accordion-collapse collapse">
                           <div class="accordion-body">
                             <p>Income protection insurance is one type of life insurance. They’re both designed to financially protect you and your family under different circumstances. Here are the key differences: 
                                 <p><strong>Income Protection</strong></p>
@@ -179,11 +165,11 @@
 
                     <div class="accordion-item">
                         <h2 class="accordion-header">
-                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="true" aria-controls="flush-collapseThree">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="true" aria-controls="flush-collapseFive">
                             Where can I get more information on Life Insurance and premiums?
                           </button>
                         </h2>
-                        <div id="flush-collapseThree" class="accordion-collapse collapse">
+                        <div id="flush-collapseFive" class="accordion-collapse collapse">
                           <div class="accordion-body">
                             <p>You can refer to our key fact sheets and Product Disclosure Statement for further information:</p>
 <ul>
@@ -282,8 +268,8 @@
                 <p id="customers"><strong>2</strong> Based on customer covers in force across Group, Retail and Direct and there may be duplicate lives insured.</p>
                 <p id="claims"><strong>3</strong> Claims statistics based on total claims paid under TAL Life Limited and TAL Life Insurance Services Limited insurance products (including funeral insurance) between 1 April 2023 and 31 March 2024.</p>
                 <br>
-                <p>The information provided on this website is general advice only and does not take into account your individual needs, objectives or financial situation. Before you decide to buy or to continue to hold an insurance product, you must read the relevant Product Disclosure Statement (PDS). The PDS contains important information which will help you understand the product including what's covered and what's not covered and to decide whether it is appropriate for you. The Target Market Determination (TMD) for the product is also available. Life insurance issued by TAL Life Limited ABN 70 050 109 450 AFSL 237848. Promoted and distributed by TAL Direct Pty Limited (of Level 16, 363 George Street, Sydney NSW 2000) ABN 39 084 666 017 AFSL 243260.</p>
-                <p>TAL Direct and TAL Life are part of the TAL Dai-ichi Life Australia Pty Limited ABN 97 150 070 483 group of companies.</p>
+                <p>The information provided on this website is general advice only and does not take into account your individual needs, objectives or financial situation. Before you decide to buy or to continue to hold an insurance product, you must read the relevant <a href="https://www.tal.com.au/existing-customers/existing-customers-documents-and-forms">Product Disclosure Statement (PDS)</a>. The PDS contains important information which will help you understand the product including what's covered and what's not covered and to decide whether it is appropriate for you. The <a href="https://www.tal.com.au/existing-customers/existing-customers-documents-and-forms">Target Market Determination (TMD)</a> for the product is also available. Life insurance issued by TAL Life Limited ABN 70 050 109 450 AFSL 237848. Promoted and distributed by TAL Direct Pty Limited (of Level 16, 363 George Street, Sydney NSW 2000) ABN 39 084 666 017 AFSL 243260.</p>
+                <p>TAL Direct and TAL Life are part of the <a href="https://www.dai-ichi-life-hd.com/en/">TAL Dai-ichi Life Australia Pty Limited</a> ABN 97 150 070 483 group of companies.</p>
             </section>
         </footer>
     
