--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script defer src="https://kit.fontawesome.com/0d4c2a2d8d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="tal-hybrid-styles.css">
     <title>Award-winning life insurance by TAL</title>
 </head>
@@ -42,7 +43,7 @@
             <ul>
                 <li><span>Apply online if you're between 19-74 (age next birthday)</span></li>
                 <li><span>Get an online quote for cover from $100,000 &ndash; $5 million</span></li>
-                <li><span>Add optional benefits for more comprehensive cover</span></li>
+                <li><span>Add optional insurance plans for more comprehensive cover</span></li>
             </ul>
             <p><a href="#rewards" class="banner-intro-cta">Build your cover</a></p>
         </section>
@@ -52,7 +53,7 @@
             </article>
             <article class="rewards-copy">
                 <h2>You could get rewarded with up to 15% off</h2>
-                <p>With TAL Health Sense you could get an upfront lifetime discount of up to 15% off your premiums on Life, Critical Illness and/or Total & Permanent Disability (TPD) insurance.<sup><a href="#health-sense">1</a></sup><br> <a href="https://www.tal.com.au/health-sense" alt="TAL Health Sense terms">Read eligibility criteria and conditions</a></p>
+                <p>With TAL Health Sense you could get an upfront lifetime discount of up to 15% off your premiums on Life, Critical Illness and/or Total & Permanent Disability (TPD) insurance.<sup><a href="#health-sense">1</a></sup><br> <a href="https://www.tal.com.au/health-sense" alt="TAL Health Sense terms" target="_blank">Read eligibility criteria and conditions</a></p>
             </article>
         </section>
         <!--section class="quote-form" id="quote-form-mobile">
@@ -103,7 +104,7 @@
                             <p>To support your loved ones when they need it most, your beneficiary can get an advance payment of 10% of the Benefit Amount, up to a maximum of $25,000, as soon as we receive the death certificate or medical certificate confirming death. </p>
                             <p><strong>Repatriation Benefit </strong></p>
                             <p>In the event you die outside Australia, we’ll increase the maximum amount payable under the Advanced Payment Benefit to 10% of the benefit amount, up to a maximum of $35,000. </p>
-                            <p> For a complete list of benefits and details, please refer to the Product Disclosure Statement. </p></div>
+                            <p> For a complete list of benefits and details, please refer to the <i class="fa-regular fa-file-pdf"></i> <a href="https://www.tal.com.au/-/media/tal/files/pds/accelerated-protection-combined-pds.pdf">Product Disclosure Statement</a>. </p></div>
                       </div>
                     </div>
                     <div class="accordion-item">
@@ -181,26 +182,6 @@
                         </div>
                     </div>
                   </div>
-                <!--article class="static-accordion">
-                    <p>What benefits does Life Insurance include?</p>
-                    <img src="https://i.imgur.com/XZW3HYG.png" alt="plus icon">
-                </article>
-                <article class="static-accordion">
-                    <p>What other insurance can I include in my TAL life insurance plan?</p>
-                    <img src="https://i.imgur.com/XZW3HYG.png" alt="plus icon">
-                </article>
-                <article class="static-accordion">
-                    <p>Am I eligible to apply for Life Insurance?</p>
-                    <img src="https://i.imgur.com/XZW3HYG.png" alt="plus icon">
-                </article>
-                <article class="static-accordion">
-                    <p>What is the difference between Life insurance and Income Protection insurance?</p>
-                    <img src="https://i.imgur.com/XZW3HYG.png" alt="plus icon">
-                </article>
-                <article class="static-accordion">
-                    <p>Where can I get more information on Life Insurance and premiums?</p>
-                    <img src="https://i.imgur.com/XZW3HYG.png" alt="plus icon">
-                </article-->
             </section>
             <section class="about-tal-why">
             <h2>4 reasons to choose TAL</h2>
@@ -215,7 +196,7 @@
                 </section>
                 <section class="about-tal-why-info-copy">
                     <img src="https://www.tal.com.au/-/media/tal/images/icons/product/why-choose-tal/tpd-why-tal-claims.png" alt="claims icon">
-                    <p>Last financial year we paid $4.2 billion in claims to 50,128 customers<sup><a href="#claims">3</a></sup></p>
+                    <p>In 2023/24 we paid $4.2 billion in claims to 50,128 customers<sup><a href="#claims">3</a></sup></p>
                 </section>
                 <section class="about-tal-why-info-copy">
                     <img src="https://www.tal.com.au/-/media/TAL/Images/Icons/green/TAL_Iconography_Green_TalkToUs" alt="support icon">
@@ -256,7 +237,7 @@
             </section>
             <section class="footer-nav-contents" id="footer-nav-contents-col-2">
                 <article class="footer-links">
-                    <a href="https://www.tal.com.au/about-us/documents-and-forms">Product Disclosure Statement</a>
+                    <a href="https://www.tal.com.au/-/media/tal/files/pds/accelerated-protection-combined-pds.pdf">Product Disclosure Statement</a>
                     <a href="https://www.tal.com.au/-/media/tal/files/fsg/financial_services_guide.pdf">Financial Services Guide</a>
                     <a href="https://www.tal.com.au/about-us/documents-and-forms">Key Fact Sheets</a>
                     <a href="https://www.tal.com.au/about-us/documents-and-forms">Target Market Determination</a>
@@ -268,8 +249,8 @@
                 <p id="customers"><strong>2</strong> Based on customer covers in force across Group, Retail and Direct and there may be duplicate lives insured.</p>
                 <p id="claims"><strong>3</strong> Claims statistics based on total claims paid under TAL Life Limited and TAL Life Insurance Services Limited insurance products (including funeral insurance) between 1 April 2023 and 31 March 2024.</p>
                 <br>
-                <p>The information provided on this website is general advice only and does not take into account your individual needs, objectives or financial situation. Before you decide to buy or to continue to hold an insurance product, you must read the relevant <a href="https://www.tal.com.au/existing-customers/existing-customers-documents-and-forms">Product Disclosure Statement (PDS)</a>. The PDS contains important information which will help you understand the product including what's covered and what's not covered and to decide whether it is appropriate for you. The <a href="https://www.tal.com.au/existing-customers/existing-customers-documents-and-forms">Target Market Determination (TMD)</a> for the product is also available. Life insurance issued by TAL Life Limited ABN 70 050 109 450 AFSL 237848. Promoted and distributed by TAL Direct Pty Limited (of Level 16, 363 George Street, Sydney NSW 2000) ABN 39 084 666 017 AFSL 243260.</p>
-                <p>TAL Direct and TAL Life are part of the <a href="https://www.dai-ichi-life-hd.com/en/">TAL Dai-ichi Life Australia Pty Limited</a> ABN 97 150 070 483 group of companies.</p>
+                <p>The information provided on this website is general advice only and does not take into account your individual needs, objectives or financial situation. Before you decide to buy or to continue to hold an insurance product, you must read the relevant <a href="https://www.tal.com.au/-/media/tal/files/pds/accelerated-protection-combined-pds.pdf">Product Disclosure Statement</a> (PDS). The PDS contains important information which will help you understand the product including what's covered and what's not covered and to decide whether it is appropriate for you. The <a href="https://www.tal.com.au/about-us/documents-and-forms" target="_blank">Target Market Determination</a> (TMD) for the product is also available. Life insurance issued by TAL Life Limited ABN 70 050 109 450 AFSL 237848. Promoted and distributed by TAL Direct Pty Limited (of Level 16, 363 George Street, Sydney NSW 2000) ABN 39 084 666 017 AFSL 243260.</p>
+                <p>TAL Direct and TAL Life are part of the <a href="https://www.dai-ichi-life-hd.com/en/" target="_blank">TAL Dai-ichi Life Australia Pty Limited</a> ABN 97 150 070 483 group of companies.</p>
             </section>
         </footer>
     
