--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <li><span>Get an online quote for cover from $100,000 &ndash; $5 million</span></li>
                 <li><span>Add optional insurance plans for more comprehensive cover</span></li>
             </ul>
-            <p><a href="#rewards" class="banner-intro-cta">Build your cover</a></p>
+            <p><a href="#rewards" class="banner-intro-cta">Get a quote</a></p>
         </section>
         <section class="rewards" id="rewards">
             <article class="rewards-icon">
@@ -233,7 +233,7 @@
         <footer>
             <section class="footer-nav-contents" id="footer-nav-contents-col-1">
                 <img src="https://www.tal.com.au/-/media/490b2a5a335f432f93776132c98c27e4.ashx" alt="TAL logo" id="footer-logo">
-                <img src="https://seal.digicert.com/seals/cascade/?tag=HHtjsoD0&referer=coverbuilder.tal.com.au&format=png&lang=en" alt="DigiCert logo" id="digicert-logo">
+                <img src="https://www.thesslstores.com.au/content/images/digiCert-basic-seal-new.svg" alt="DigiCert logo" id="digicert-logo">
             </section>
             <section class="footer-nav-contents" id="footer-nav-contents-col-2">
                 <article class="footer-links">
@@ -253,7 +253,6 @@
                 <p>TAL Direct and TAL Life are part of the <a href="https://www.dai-ichi-life-hd.com/en/" target="_blank">TAL Dai-ichi Life Australia Pty Limited</a> ABN 97 150 070 483 group of companies.</p>
             </section>
         </footer>
-    
 </main>
 </body>
 </html>
