--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
                           <div class="accordion-body">
                             <p>You can refer to our key fact sheets and Product Disclosure Statement for further information:</p>
 <ul>
-    <li><a href="https://www.tal.com.au/-/media/tal/files/pds/key-facts/talr8089-tal-ap-life-insurance-key-facts.pdf">Life Insurance key facts</a></li>
-        <li><a href="https://www.tal.com.au/-/media/tal/files/pds/key-facts/talr8090-tal-ap-premiums-key-facts.pdf">Life insurance premiums key facts</a></li>
-            <li><a href="https://www.tal.com.au/-/media/tal/files/pds/accelerated-protection-combined-pds.pdf">Product Disclosure Statement</a></li>
+    <li><i class="fa-regular fa-file-pdf"></i> <a href="https://www.tal.com.au/-/media/tal/files/pds/key-facts/talr8089-tal-ap-life-insurance-key-facts.pdf">Life Insurance key facts</a></li>
+        <li><i class="fa-regular fa-file-pdf"></i> <a href="https://www.tal.com.au/-/media/tal/files/pds/key-facts/talr8090-tal-ap-premiums-key-facts.pdf">Life insurance premiums key facts</a></li>
+            <li><i class="fa-regular fa-file-pdf"></i> <a href="https://www.tal.com.au/-/media/tal/files/pds/accelerated-protection-combined-pds.pdf">Product Disclosure Statement</a></li>
 </ul>
     </p>    </div>
                         </div>
