--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <header id="header" class="header">
         <section class="header-logo-product">
             <a href="www.tal.com.au"><img src="https://www.tal.com.au/-/media/490b2a5a335f432f93776132c98c27e4.ashx" alt="TAL logo" class="header-logo"></a>
+            <section class="slash">
+                <span>&#47;</span>
+            </section>
             <section class="header-product">
                 <h1>LIFE</h1>
                 <h1>INSURANCE</h1>
